[FIX] Fix gap-5 class margin

--- a/src/app/styles/layout.scss
+++ b/src/app/styles/layout.scss
@@ -119,7 +119,7 @@ $safe-zone-y-sm: 15px;
 
 .gap-5 {
   > * {
-    margin: 0 2.313rem;
+    margin: 0 0.156rem;
   }
 }
 
